exercise5/condor/667.0-error.txt
  File "Exercise5.py", line 59
    for ep in np.linspace(0.,0.3,0.001)
                                      ^
SyntaxError: invalid syntax
